# 152fz-compliance-as-code

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LEGAL.md  README.md  README.ru.md  pyproject.toml
.github/workflows/: ci.yml  security.yml
examples/input_policies/: privacy_policy_online_shop_ru.md  user_agreement_saas_ru.md
scripts/: lint.sh  perf_check.sh
src/pd152_compliance_as_code/: __init__.py
src/pd152_compliance_as_code/ai/: __init__.py  base.py  policy_parser.py  risk_narrative.py
src/pd152_compliance_as_code/cli/: main.py
src/pd152_compliance_as_code/cli/commands/: __init__.py  generate_all.py  generate_consents.py  generate_dpi.py  generate_flows.py  generate_register.py  init_template.py  validate.py
src/pd152_compliance_as_code/domain/: __init__.py  models.py  vocab.py
src/pd152_compliance_as_code/generators/: consents_docx.py  dpa_docx.py  dpi_risk_report.py  flows_diagram.py  register_docx.py
src/pd152_compliance_as_code/risk_engine/: controls_catalog.py  mapper.py  scoring.py
src/pd152_compliance_as_code/webapp/: __init__.py  app.py
src/pd152_compliance_as_code/webapp/templates/: base.html  wizard.html
src/pd152_compliance_as_code/yaml_schema/: loader.py  schema.yaml  validator.py
tests/integration/: test_example_medical_clinic_flow.py  test_full_pipeline_shop_yaml_to_docs.py
tests/unit/: test_ai_stubs.py  test_cli_commands.py  test_consents_generator.py  test_flows_diagram_generator.py  test_models_integrity.py  test_register_generator.py  test_risk_scoring.py  test_yaml_loader.py  test_yaml_validator.py
(+5 files in other folders)
